[package]
name = "bedrust"
description = "A command line tool to invoke and work with Large Language models on AWS, using Amazon Bedrock"
version = "0.8.0"
edition = "2021"
authors = ["Darko Mesaros <d@rko.rs>", "Stephen Barr <stephen.barr@devfactory.com>", "Russel Cohen <rcoh@rcoh.me>"]
license = "MIT OR Apache-2.0"
keywords = ["aws", "generative-ai", "bedrock", "chatbot"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://rup12.net"
repository = "https://github.com/darko-mesaros/bedrust"
exclude = [
"img/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.79"
aws-config = { version = "1.5.6", features = ["behavior-version-latest"]}
aws-sdk-bedrock = "1.49.0"
aws-sdk-bedrockruntime = "1.49.0"
aws-types = "1.3.3"
base64 = "0.22.0"
clap = { version = "4.5.0", features = ["derive"] }
colored = "2.1.0"
dialoguer = { version = "0.11.0", default-features = false, features = ["fuzzy-select", "completion"] }
dirs = "5.0.1"
figlet-rs = "0.1.5"
ignore = "0.4.22"
image = "0.25.0"
indicatif = "0.17.8"
quick-xml = { version = "0.31.0", features = ["serde", "serde-types", "serialize"] }
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
termcolor = "1.4.1"
tokio = { version = "1.37.0", features = ["full"] }
