[package]
name = "bedrust"
description = "A command line tool to invoke and work with Large Language models on AWS, using Amazon Bedrock"
version = "0.8.6"
edition = "2021"
authors = ["Darko Mesaros <d@rko.rs>", "Stephen Barr <stephen.barr@devfactory.com>", "Russel Cohen <rcoh@rcoh.me>"]
license = "MIT OR Apache-2.0"
keywords = ["aws", "generative-ai", "bedrock", "chatbot"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://rup12.net"
repository = "https://github.com/darko-mesaros/bedrust"
exclude = [
"img/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.96"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"]}
aws-sdk-bedrock = "1.74.0"
aws-sdk-bedrockruntime = "1.74.0"
aws-types = "1.3.5"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
colored = "2.2.0"
convert_case = "0.6.0"
dialoguer = { version = "0.11.0", default-features = false, features = ["fuzzy-select", "completion"] }
dirs = "5.0.1"
figlet-rs = "0.1.5"
handlebars = "6.3.1"
html-escape = "0.2.13"
ignore = "0.4.23"
image = "0.25.5"
indicatif = "0.17.11"
lazy_static = "1.5.0"
quick-xml = { version = "0.31.0", features = ["serde", "serde-types", "serialize"] }
rand = "0.8.5"
regex = "1.11.1"
ron = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
termcolor = "1.4.1"
tokio = { version = "1.43.0", features = ["full"] }
